# telegramR

./: .gitignore  Cargo.toml  README.md  ResourceHacker.ini  build.rs  config.json  dev.cmd  dev.py  rustfmt.toml
scripts/: dev-use-ws.js  dist.js  package.json  release.js  sfx.cmd  u.js
src/: actions.rs  browser.rs  config.rs  d  d.html  d.sz  embedded.rs  lib.rs  main.rs  minimal_server.rs  protocol.rs  splitter.rs  state.rs  u.rs  ws_protocol.rs  wv_protocol.rs
tools/: ResourceHacker.ini
ui/: .gitignore  package-lock.json  package.json  tsconfig.json  tslint.json  typings.d.ts
ui/src/: actions.ts  index.html  index.ts  monaco.tsx  panel.tsx  picostyle.ts  rpc.ts  state.ts  textfield.tsx  view.tsx
ui/styles/: bulma.min.css  main.scss
ui/vendors/fabric/: fabric.min.js
