[package]
name = "telegramr"
version = "0.1.0"
authors = ["pd29 <pd29@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lzma = "*"
snap = "0.2"
ws = { version = "0.7.9", optional = true }
web-view = { path = "deps/web-view", version = "0.3.0", optional = true }

[profile.release]
lto = true
panic = "abort"

[features]
use-browser = ["ws"]
use-embedded = ["web-view"]

default = ["use-browser"]